Fixed spacing on mobile for first section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3024,7 +3024,7 @@ ul.actions.special {
   }
 
   #logo p {
-    margin: 1.25em 0 0 0;
+    margin: 1.25em 0 1.25em 0;
     display: block;
     letter-spacing: 0.2em;
     font-size: 0.9em;
